In progress of making landing page. There are sizing issues that need to be addressed.
In the process of creating the landing page. The page currently has an image, some text with the title of the website and a brief description and a signup and a login in button. The issue is that this website breaks at different aspect ratios. I think that I am going to have to start again tomorrow and remove a lot of the css I have written and try and re do it.

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.view {
+  padding-top: 8%;
+  position: relative;
+  background: url('https://source.unsplash.com/xEhhbS6dFsE/1920x1080') no-repeat;
+  background-size: 150%;
+  background-position: center;
+  height: 100vh;
+  margin-top: -24px;
+  margin-bottom: -50px;
+}
+
+.footer {
+  padding-top: 2.5%;
+}
